# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.common_event_manager") {
  sources = [
    "src/common_event_manager_errors.cj",
    "src/common_event_manager_ffi.cj",
    "src/common_event_manager_utils.cj",
    "src/common_event_manager.cj",
    "src/support.cj",
  ]

  cj_deps = [
    "../ohos/base:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
    "../common_event/common_event_data:ohos.common_event_data",
    "../common_event/common_event_publish_data:ohos.common_event_publish_data",
    "../common_event/common_event_subscribe_info:ohos.common_event_subscribe_info",
    "../common_event/common_event_subscriber:ohos.common_event_subscriber",
    "../common_event/value_type:ohos.value_type"
  ]

  external_deps = [ "common_event_service:cj_common_event_manager_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "common_event_manager"
}
