# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.contact") {
  sources = [
    "src/contact.cj",
    "src/contact_api.cj",
    "src/contact_attributes.cj",
    "src/contact_ffi.cj",
    "src/email.cj",
    "src/event.cj",
    "src/group.cj",
    "src/holder.cj",
    "src/im_address.cj",
    "src/name.cj",
    "src/organization.cj",
    "src/phone_number.cj",
    "src/postal_address.cj",
    "src/relation.cj",
    "src/sip_address.cj",
    "src/utils.cj",
  ]

  cj_deps = [
    "../ability:ohos.ability",
    "../arkui/cj:ohos.base",
    "../data_share_predicates:ohos.data_share_predicates",
    "../encoding:ohos.encoding.json",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../values_bucket:ohos.values_bucket",
    "../labels:ohos.labels",
  ]

  external_deps = [ "contacts_data:contact_cj" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "contact"
}
