# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.crypto") {
  sources = [
    "src/asy_key_generator.cj",
    "src/asy_key_generator_by_spec.cj",
    "src/cipher.cj",
    "src/cj_crypto_common.cj",
    "src/cj_crypto_enum.cj",
    "src/cj_crypto_interface.cj",
    "src/cj_crypto_log.cj",
    "src/cj_crypto_utils.cj",
    "src/dhkey_util.cj",
    "src/ecckey_util.cj",
    "src/kdf.cj",
    "src/key_agreement.cj",
    "src/key_pair.cj",
    "src/mac.cj",
    "src/md.cj",
    "src/pri_key.cj",
    "src/pub_key.cj",
    "src/random.cj",
    "src/sign.cj",
    "src/sm2_crypto_util.cj",
    "src/sym_key.cj",
    "src/sym_key_generator.cj",
    "src/verify.cj",
    "src/cj_crypto_native.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "crypto_framework:cj_cryptoframework_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "crypto"
}
