# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.file_fs") {
  sources = [
    "src/cj_file_fs.cj",
    "src/conflict_file_exception.cj",
    "src/file.cj",
    "src/native.cj",
    "src/random_access_file.cj",
    "src/stat.cj",
    "src/stream.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "file_api:cj_file_fs_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "file_fs"
}

ohos_cj_library("ohos.file_fs.interop") {
  sources = [
    "src/interop/system_object_interop.cj",
  ]

  cj_deps = [
    ":ohos.file_fs",
    "../ffi_bind:ohos.ffi",
    "../interop:ohos.ark_interop",
    "../interop:ohos.ark_interop_helper",
    "../labels:ohos.labels",
  ]

  external_deps = [ "file_api:cj_file_fs_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "file_fs.interop"
}
