# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.file_grant_permission") {
  sources = [
    "src/cj_grant_permission.cj",
    "src/cj_grant_permission_ffi.cj",
    "src/cj_grant_permission_utils.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../labels:ohos.labels",
  ]

  external_deps = [ "app_file_service:cj_file_grant_permission_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "file_grant_permission"
}
