# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.i18n") {
  sources = [
    "src/break_iterator.cj",
    "src/calendar.cj",
    "src/entity_recognizer.cj",
    "src/holiday_manager.cj",
    "src/i18_nutil.cj",
    "src/i18n_addon.cj",
    "src/i18n_common.cj",
    "src/i18n_phone_number_format.cj",
    "src/index_util.cj",
    "src/normalizer.cj",
    "src/system.cj",
    "src/time_zone.cj",
    "src/transliterator.cj",
    "src/unicode.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "i18n:cj_i18n_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "i18n"
}
