# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.multimedia_media") {
  sources = [
    "src/avimage_generator.cj",
    "src/avmetadata_extractor.cj",
    "src/avplayer.cj",
    "src/avrecorder.cj",
    "src/avscreen_capture_record_config.cj",
    "src/avscreen_capture_recorder.cj",
    "src/media_avscreen_capture_ffi.cj",
    "src/avtranscoder_config.cj",
    "src/avtranscoder.cj",
    "src/media_common.cj",
    "src/media_ffi.cj",
    "src/media_source.cj",
    "src/sound_pool.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../image:ohos.image",
    "../multimedia/audio:ohos.multimedia.audio",
    "../multimedia/media_library:ohos.multimedia.photo_accesshelper",
    "../labels:ohos.labels",
  ]

  external_deps = [
    "player_framework:cj_avplayer_ffi",
    "player_framework:cj_avscreen_capture_ffi",
    "player_framework:cj_avtranscoder_ffi",
    "player_framework:cj_media_avrecorder_ffi",
    "player_framework:cj_metadatahelper_ffi",
    "player_framework:cj_soundpool_ffi",
  ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "multimedia_media"
}
