# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.resource_manager") {
  sources = [
    "src/resource_manager_common.cj",
    "src/resource_manager_errors.cj",
    "src/resource_manager_ffi.cj",
    "src/resource_manager.cj",
  ]
  cj_deps = [
    "../ohos/base:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../global/drawable_descriptor:ohos.drawable_descriptor",
    "../global/raw_file_descriptor:ohos.raw_file_descriptor",
    "../global/resource:ohos.resource",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "resource_management:cj_resource_manager_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "resource_manager"
}
