# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.rpc") {
  sources = [
    "src/ashmem.cj",
    "src/cj_rpc_ffi.cj",
    "src/cj_rpc_interface.cj",
    "src/cj_rpc_utils.cj",
    "src/error_code.cj",
    "src/iremote_object.cj",
    "src/message_sequence.cj",
    "src/remote_object.cj",
    "src/remote_proxy.cj",
    "src/request_result.cj",
  ]

  cj_deps = [
    "../ohos/base:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "ipc:cj_ipc_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "rpc"
}
