# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.cert") {
  sources = [
    "src/cert_chain_validator.cj",
    "src/cert_chain_validator_ffi.cj",
    "src/cert_crlcollection.cj",
    "src/cert_crlcollection_ffi.cj",
    "src/cert_extension.cj",
    "src/cert_extension_ffi.cj",
    "src/cert_framework_api.cj",
    "src/cert_framework_const.cj",
    "src/cert_framework_enum.cj",
    "src/cert_framework_extend.cj",
    "src/cert_framework_ffi.cj",
    "src/cert_framework_struct.cj",
    "src/cert_framework_struct_ffi.cj",
    "src/cert_framework_struct_match.cj",
    "src/x500_distinguished_name.cj",
    "src/x500_distinguished_name_ffi.cj",
    "src/x509_cert.cj",
    "src/x509_cert_chain.cj",
    "src/x509_cert_chain_ffi.cj",
    "src/x509_cert_chain_struct.cj",
    "src/x509_cert_ffi.cj",
    "src/x509_crl.cj",
    "src/x509_crl_ffi.cj",
    "src/x509_trust_anchor.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../crypto:ohos.crypto",
    "../ffi_bind:ohos.ffi",
    "../labels:ohos.labels",
  ]

  external_deps = [ "certificate_framework:cj_cert_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "cert"
}
