# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.ui_test") {
  sources = [
    "src/cj_process.cj",
    "src/const.cj",
    "src/ui_test_api.cj",
    "src/ui_test_common.cj",
    "src/ui_test_ffi.cj",
  ]

  cj_deps = [
    "../ability:ohos.ability",
    "../ability:ohos.ability_delegator_registry",
    "../arkui/cj:ohos.base",
    "../bundle_manager:ohos.bundle_manager",
    "../encoding:ohos.encoding.json",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../system_parameter_enhance:ohos.system_parameter_enhance",
    "../labels:ohos.labels",
  ]

  external_deps = [ "arkxtest:cj_ui_test_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "ui_test"
}
