# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.webview") {
  sources = [
    "src/geolocation_permissions.cj",
    "src/web_cookie_manager.cj",
    "src/web_storage.cj",
    "src/webview_common.cj",
    "src/webview_controller.cj",
    "src/webview_ffi.cj",
    "src/webview_utils.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../arkui/cj:ohos.ui_resource",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../image:ohos.image",
    "../labels:ohos.labels",
    "../resource_manager:ohos.resource_manager",
  ]

  external_deps = [ "webview:cj_webview_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "webview"
}
