# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.wifi_manager") {
  sources = [
    "src/common.cj",
    "src/error_code.cj",
    "src/ip_info.cj",
    "src/ipv6_info.cj",
    "src/wifi_device_config.cj",
    "src/wifi_eap_config.cj",
    "src/wifi_info_elem.cj",
    "src/wifi_linked_info.cj",
    "src/wifi_p2p_config.cj",
    "src/wifi_p2p_device.cj",
    "src/wifi_p2p_group_info.cj",
    "src/wifi_p2p_linked_info.cj",
    "src/wifi_scan_info.cj",
    "src/wifi_wapi_config.cj",
    "src/wifi.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../labels:ohos.labels",
  ]

  external_deps = [ "wifi:cj_wifi_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "wifi_manager"
}
